--- a/test/fixtures/recipe_foods.yml
+++ b/test/fixtures/recipe_foods.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  recipe_id: 1
-  food_id: 1
-  quantity: MyString
+  recipe: one
+  food: one
 
 two:
-  recipe_id: 1
-  food_id: 1
-  quantity: MyString
+  recipe: two
+  food: two
