--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bangohan",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@fortawesome/fontawesome-free": "5.15.4",
     "@nathanvda/cocoon": "^1.2.14",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
